WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291725
Unreviewed VisionOS build fix after
293779@main
https://bugs.webkit.org/show_bug.cgi?id=291725
Summary
Unreviewed VisionOS build fix after 293779@main
Chris Dumez
Reported
2025-04-17 17:42:10 PDT
Fix VisionOS build
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2025-04-17 17:42:12 PDT
<
rdar://problem/149511423
>
Chris Dumez
Comment 2
2025-04-17 17:42:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44239
EWS
Comment 3
2025-04-17 17:46:37 PDT
Committed
293836@main
(d451bf0b02dc): <
https://commits.webkit.org/293836@main
> Reviewed commits have been landed. Closing PR #44239 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug