Unreviewed VisionOS build fix after 293779@main https://bugs.webkit.org/show_bug.cgi?id=291725 rdar://149511423

* Source/WebCore/platform/audio/cocoa/SpatialAudioExperienceHelper.mm:
(WebCore::createSpatialAudioExperienceWithOptions):

Canonical link: https://commits.webkit.org/293836@main